--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /*
+            Shorthand - background
+                color > image > position > repeat > size > attachment
+
+            */
+            background: black url('imagens/wallpaper002.jpg') center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            text-align: justify;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +37,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolore, voluptatem est illo harum quia, officiis at facilis provident officia eum corrupti, quaerat recusandae quidem? Mollitia dignissimos voluptates consequatur totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quas dignissimos distinctio illo quam saepe. Assumenda nostrum eaque mollitia labore quam praesentium reprehenderit dolorum molestiae, sed unde rem qui quo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, omnis animi voluptatum laboriosam veniam error quo cum explicabo dolorum voluptates, reiciendis totam ullam sit, officiis vero! Eius esse delectus odio.</p>
     </main>
 </body>
 </html>
