--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,6 +10,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table {
+            position: relative;
             width: 500px;
             border-collapse: collapse;
         }
@@ -17,10 +18,29 @@
             border: 1px solid black;
             padding: 10px;
         }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
         }
+
+        thead > tr > th {
+            position: sticky;
+            top: 0;
+            background-color: #383838;
+        }
+
+        tbody > tr:nth-child(even) { /* 2n-1 */
+            background-color: lightgray;
+        }
+
         td.num {
             text-align: right;
         }
@@ -31,6 +51,7 @@
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -39,10 +60,11 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 90px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -157,8 +179,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td class="num"><strong>210.147.125</strong></td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>210 147 125</strong></td>
             </tr>
         </tfoot>
     </table>
