--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -8,6 +8,7 @@
         iframe {
             height: 400px;
             width: 400px;
+            border: 3px solid black;
         }
     </style>
 </head>
