--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -14,19 +14,28 @@
             height: 450px;
             border: 2px solid black;
         }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+        a:hover {
+            color: blue;
+        }
     </style>
 </head>
 <body>
     <h1>Faça uma escolha</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci doloremque quod nihil quas error inventore tempore illum ducimus eius odio modi voluptatem est a, fuga pariatur, omnis id harum laboriosam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse velit consequatur laudantium, non deserunt inventore eligendi nemo minus aut culpa dolor excepturi magni mollitia sed iure magnam fugit provident debitis!</p>
     <ul>
-        <li><a href="">Primeira página</a></li>
-        <li><a href="#">Segunda página</a></li>
-        <li><a href="#">Terceira página</a></li>
+        <li><a href="paginas-extras/pag001.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="frame">Segunda página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam adipisci maxime pariatur alias illum, nostrum esse itaque recusandae facilis repudiandae molestiae repellat suscipit ea vel asperiores dolorum vitae voluptatem officia?
     Animi earum, delectus error illum eaque ullam dignissimos in, voluptates, voluptate recusandae itaque fugiat velit? Repudiandae animi, excepturi illo sint in numquam totam cum consectetur magni, ut labore dolores facere.</p>
-    <iframe id="tela" frameborder="1">Infelizmente seu navegador não é compativel com isso.</iframe>
+
+    <iframe name="frame" id="tela" frameborder="1">Infelizmente seu navegador não é compativel com isso.</iframe>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nemo mollitia exercitationem dolorum quisquam eaque eligendi maiores ducimus laboriosam rerum soluta cum, eos, natus id rem. Incidunt soluta quas fuga.
     Ipsum nesciunt ea voluptates temporibus soluta illo necessitatibus cumque nostrum beatae rem architecto dolorum corporis excepturi molestias consequuntur optio consequatur fugiat numquam nemo a, explicabo animi iure cupiditate quis? Asperiores.</p>
 </body>
